--- a/store/src/default/pages/Authentication/Auth/auth.component.html
+++ b/store/src/default/pages/Authentication/Auth/auth.component.html
@@ -7,13 +7,13 @@
             <div fxFlex="100" fxFlex.gt-sm="50" class="p-2" ngClass.sm="mt-2" ngClass.xs="mt-2">
                 <h4><span>or continue with</span></h4>
 
-                <div class="text-center mt-2">
+                <div class="text-center mt-3 formIcons">
                     <mat-icon>facebook</mat-icon>
                     <mat-icon><img src="../../../../assets/images/google.png" alt=""></mat-icon>
                     <mat-icon>apple</mat-icon>
                 </div>
                 <!-- <h2 class="text-muted text-center">Sign up</h2> -->
-                <span>Become a Beaver Member</span>
+                <h6>Become a Beaver Member</h6>
                 <form [formGroup]="registerForm" (ngSubmit)="onRegisterFormSubmit(registerForm.value)" novalidate>
                     <mat-form-field class="w-100 mt-2" [ngClass]="{validationcolor:registerForm.controls.name.hasError('required') && submitted }">
                         <input matInput placeholder="Full Name" formControlName="name" required>
@@ -40,8 +40,8 @@
                         <mat-checkbox class="example-margin">Remember me!</mat-checkbox>
                     </div>
 
-                    <div class="text-center mt-2">
-                        By continueing. I agree to the terms of use & pivacy polices
+                    <div class="mt-2">
+                        <h3>By continueing. I agree to the terms of use & pivacy polices</h3>
                     </div>
                     <!-- <mat-form-field class="w-100 mt-1">
                         <input matInput type="text" maxlength=15 appOnlyNumber placeholder="Phone Number" formControlName="phoneNumber">
@@ -49,19 +49,19 @@
                     </mat-form-field> -->
 
                     <div class="text-center mt-2">
-                        <button color="primary" type="submit" class="mat-elevation-z6">
+                        <button type="submit" mat-button color="primary" class="signUpBtn actionBtn">
                             <!-- <mat-icon>person_add</mat-icon> -->
-                            <button mat-button color="primary" class="mat-elevation-z6">Sign up</button>
+                            Sign up
                         </button>
                     </div>
 
                     <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-2">
-                        <h5 class="text-muted auth forgot">
+                        <h5 class="text-center text-red auth forgot w-100">
                             Already have an account? </h5>
                     </div>
 
-                    <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-2">
-                        <h5 class="text-muted auth forgot">
+                    <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-1">
+                        <h5 class="text-center text-red auth forgot w-100">
                             Become a seller</h5>
                     </div>
                 </form>
