--- a/store/src/default/shared/components/menu/menu.component.html
+++ b/store/src/default/shared/components/menu/menu.component.html
@@ -7,7 +7,7 @@
     </a> -->
     <a mat-button class="colorMenu" routerLinkActive="horizontal-active-link"
         *ngFor="let category of categories;let i=index" [routerLinkActiveOptions]="{exact:true}"
-        [matMenuTriggerFor]="menu" (click)="indexData(i,category.categoryId)">
+        [matMenuTriggerFor]="menu" (click)="indexData(i,category.categoryId)" [routerLink]="['/home', category.categoryId]">
         <img class="menu-img" src="assets/images/1-a.png">
         <span class="menu-text">{{category.name}}</span>
         <!-- <mat-icon class="caret">arrow_drop_down</mat-icon> -->
