--- a/admin/src/theme/default/admin/shared/components/navigation/navigation.component.html
+++ b/admin/src/theme/default/admin/shared/components/navigation/navigation.component.html
@@ -34,7 +34,7 @@
         </a>
     </li>
     <li class="nav-item mega-dropdown customers-nav">
-        <a [routerLink]="['/demo']" [routerLinkActive]="'active'" class="nav-link waves-effect waves-dark" href="javascript:void(0)">
+        <a [routerLink]="['/adv']" [routerLinkActive]="'active'" class="nav-link waves-effect waves-dark" href="javascript:void(0)">
             <span class="d-md-block"> <img src="assets/img/customers-ico.png">ADV
     </span>
         </a>
