--- a/store/src/default/shared/components/trending-product/trending-product.component.html
+++ b/store/src/default/shared/components/trending-product/trending-product.component.html
@@ -33,7 +33,7 @@
   </div>
 </div> -->
 
-<mat-sidenav-container class="productsWrap trending-products" >
+<mat-sidenav-container class="productsWrap trending-products">
   <mat-sidenav-content class="all-products" ngClass.gt-sm="p-left">
     <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center"
       class="filter-row mat-elevation-z1 text-muted">
@@ -63,11 +63,20 @@
       <div *ngFor="let product of (listSandbox.productlist$ | async)" fxFlex="100" [fxFlex.gt-sm]="viewCol"
         fxFlex.sm="50" class="col productDiv">
         <mat-card class="product-item text-center card-hover productCol">
+          <!-- <mat-icon class="mat-icon-lg"><img src="../../../assets/images/Add to wishlist.png" /></mat-icon> -->
+          <button mat-icon-button>
+            <mat-icon><img src="../../../assets/images/Add to wishlist.png" /></mat-icon>
+          </button>
           <a [routerLink]="['/products/productdetails', product.productId]" class="image-link">
             <img *ngIf="product['Images'].defaultImage == 1"
               [src]="imagePath+ '?path=' + product['Images'].containerName + '&name=' + product['Images'].image + '&width=260&height=260'"
               onError="this.src='/assets/images/default_image.png';">
           </a>
+          <div class="item">
+            <div>
+              <div class="halfstar1">&#x2605; 4.3|234</div>
+            </div>
+          </div>
           <!-- <h4 class="category text-muted text-truncate ">{{product.metaTagTitle }}</h4> -->
           <a [routerLink]="['/products/productdetails', product.productId]" class="title text-truncate">
             {{product.name}}
