home page design edits

--- a/store/src/default/pages/Authentication/Auth/auth.component.html
+++ b/store/src/default/pages/Authentication/Auth/auth.component.html
@@ -4,7 +4,7 @@
             <div fxFlex="100" fxFlex.gt-sm="50" class="p-2">
                 <router-outlet></router-outlet>
             </div>
-            <div fxFlex="100" fxFlex.gt-sm="50" class="p-2" ngClass.sm="mt-2" ngClass.xs="mt-2">
+            <div class="signUpForm" fxFlex="100" fxFlex.gt-sm="50" class="p-2" ngClass.sm="mt-2" ngClass.xs="mt-2">
                 <h4><span>or continue with</span></h4>
 
                 <div class="text-center mt-3 formIcons">
