--- a/store/src/default/pages/Authentication/sign-in/sign-in.component.html
+++ b/store/src/default/pages/Authentication/sign-in/sign-in.component.html
@@ -1,4 +1,4 @@
-<div fxFlex="100">
+<div fxFlex="100" class="signInForm">
     <!-- <span style="padding: 2px; font-weight: 500;">or continue with</span> -->
 
     <h4><span>or continue with</span></h4>
