--- a/store/src/default/pages/home/home.component.html
+++ b/store/src/default/pages/home/home.component.html
@@ -1,52 +1,56 @@
-<app-main-carousel></app-main-carousel>
+<div class="siteWrap">
+    <app-main-carousel class="home-carousel"></app-main-carousel>
+    <div class="site-container">
+        <div class="products-tabs featured-tabs">
+            <mat-tab-group mat-stretch-tabs>
+                <mat-tab label="Most Popular and Trending">
+                    <app-trending-product></app-trending-product>
+                </mat-tab>
+            </mat-tab-group>
+        </div>
 
-<div class="products-tabs featured-tabs">
-    <mat-tab-group mat-stretch-tabs>
-        <mat-tab label="Most Popular and Trending">
-            <app-trending-product></app-trending-product>
-        </mat-tab>
-    </mat-tab-group>
+        <div class="products-tabs featured-tabs">
+            <mat-tab-group mat-stretch-tabs>
+                <mat-tab label="Dynamic Text Area">
+                    <app-advertisment-product></app-advertisment-product>
+                </mat-tab>
+            </mat-tab-group>
+        </div>
+
+        <div class="products-tabs featured-tabs">
+            <mat-tab-group mat-stretch-tabs>
+                <mat-tab label="Dynamic Text Area">
+                    <app-advertisment-product></app-advertisment-product>
+                </mat-tab>
+            </mat-tab-group>
+        </div>
+
+        <div class="products-tabs featured-tabs">
+            <mat-tab-group mat-stretch-tabs>
+                <mat-tab label="Dynamic Text Area">
+                    <app-advertisment-product></app-advertisment-product>
+                </mat-tab>
+            </mat-tab-group>
+        </div>
+
+        <div class="products-tabs featured-tabs">
+            <mat-tab-group mat-stretch-tabs>
+                <mat-tab label="Dynamic Text Area">
+                    <app-advertisment-product></app-advertisment-product>
+                </mat-tab>
+            </mat-tab-group>
+        </div>
+
+        <div class="products-tabs featured-tabs">
+            <mat-tab-group mat-stretch-tabs>
+                <mat-tab label="Dynamic Text Area">
+                    <app-advertisment-product></app-advertisment-product>
+                </mat-tab>
+            </mat-tab-group>
+        </div>
+    </div>
 </div>
 
-<div class="products-tabs featured-tabs">
-    <mat-tab-group mat-stretch-tabs>
-        <mat-tab label="Dynamic Text Area">
-            <app-advertisment-product></app-advertisment-product>
-        </mat-tab>
-    </mat-tab-group>
-</div>
-
-<div class="products-tabs featured-tabs">
-    <mat-tab-group mat-stretch-tabs>
-        <mat-tab label="Dynamic Text Area">
-            <app-advertisment-product></app-advertisment-product>
-        </mat-tab>
-    </mat-tab-group>
-</div>
-
-<div class="products-tabs featured-tabs">
-    <mat-tab-group mat-stretch-tabs>
-        <mat-tab label="Dynamic Text Area">
-            <app-advertisment-product></app-advertisment-product>
-        </mat-tab>
-    </mat-tab-group>
-</div>
-
-<div class="products-tabs featured-tabs">
-    <mat-tab-group mat-stretch-tabs>
-        <mat-tab label="Dynamic Text Area">
-            <app-advertisment-product></app-advertisment-product>
-        </mat-tab>
-    </mat-tab-group>
-</div>
-
-<div class="products-tabs featured-tabs">
-    <mat-tab-group mat-stretch-tabs>
-        <mat-tab label="Dynamic Text Area">
-            <app-advertisment-product></app-advertisment-product>
-        </mat-tab>
-    </mat-tab-group>
-</div>
 
 
 <!-- <div class="products-tabs featured-tabs">
