--- a/store/src/default/shared/components/main-submenu-carousel/main-submenu-carousel.component.html
+++ b/store/src/default/shared/components/main-submenu-carousel/main-submenu-carousel.component.html
@@ -9,8 +9,8 @@
                         <div fxLayout="column" fxLayoutAlign="center center" class="content">
                             <h1>{{slide.title}}</h1>
                             <h3 [innerHtml]='slide.content'></h3>
-                            <button mat-raised-button color="primary" [routerLink]="['/products', categoryId]">Shop
-                                now</button>
+                            <!-- <button mat-raised-button color="primary" [routerLink]="['/products', categoryId]">Shop
+                                now</button> -->
                         </div>
                     </div>
                 </div>
