--- a/store/src/default/shared/components/footer/footer.component.html
+++ b/store/src/default/shared/components/footer/footer.component.html
@@ -1,37 +1,37 @@
-<footer class="bg-primary footer">
-    <div fxLayout="row wrap" fxLayoutAlign="space-between" class="py-3 border-bottom-mute theme-container">
+<footer class="footer">
+    <div fxLayout="row wrap" fxLayoutAlign="space-between" class="py-3 theme-container">
 
         <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="25" class="useful-links">
             <h3 class="col-title">USEFUL LINKS FOR CUSTOMER</h3>
-            <div class=""><a mat-button>Contact us</a></div>
-            <div class=""><a mat-button>FAQs</a></div>
-            <div class=""><a mat-button>T&C</a></div>
-            <div class=""><a mat-button>Shiping</a></div>
-            <div class=""><a mat-button>Returns</a></div>
-            <div class=""><a mat-button>Pricavy policy</a></div>
+            <div class="footer-menu-item"><a mat-button>Contact us</a></div>
+            <div class="footer-menu-item"><a mat-button>FAQs</a></div>
+            <div class="footer-menu-item"><a mat-button>T&C</a></div>
+            <div class="footer-menu-item"><a mat-button>Shiping</a></div>
+            <div class="footer-menu-item"><a mat-button>Returns</a></div>
+            <div class="footer-menu-item"><a mat-button>Pricavy policy</a></div>
 
             <h3 class="col-title mt-3">JOIN OUR COMMUNITY</h3>
-            <div class=""><a mat-button>Blog</a></div>
-            <div class=""><a mat-button>Instagram</a></div>
-            <div class=""><a mat-button>Facebook</a></div>
-            <div class=""><a mat-button>Tiktok</a></div>
-            <div class=""><a mat-button>Twitter</a></div>
+            <div class="footer-menu-item"><a mat-button>Blog</a></div>
+            <div class="footer-menu-item"><a mat-button>Instagram</a></div>
+            <div class="footer-menu-item"><a mat-button>Facebook</a></div>
+            <div class="footer-menu-item"><a mat-button>Tiktok</a></div>
+            <div class="footer-menu-item"><a mat-button>Twitter</a></div>
 
         </div>
         <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="25" ngClass.xs="mt-2">
 
 
             <h3 class="col-title">USEFUL LINKS FOR VENDOR</h3>
-            <div class=""><a mat-button>Contact us</a></div>
-            <div class=""><a mat-button>FAQs</a></div>
-            <div class=""><a mat-button>T&C</a></div>
-            <div class=""><a mat-button>Shiping</a></div>
-            <div class=""><a mat-button>Returns</a></div>
-            <div class=""><a mat-button>Pricavy policy</a></div>
+            <div class="footer-menu-item"><a mat-button>Contact us</a></div>
+            <div class="footer-menu-item"><a mat-button>FAQs</a></div>
+            <div class="footer-menu-item"><a mat-button>T&C</a></div>
+            <div class="footer-menu-item"><a mat-button>Shiping</a></div>
+            <div class="footer-menu-item"><a mat-button>Returns</a></div>
+            <div class="footer-menu-item"><a mat-button>Pricavy policy</a></div>
 
             <h3 class="mt-3 col-title">CORPORATE</h3>
-            <div class=""><a mat-button>Contact us</a></div>
-            <div class=""><a mat-button>Careers</a></div>
+            <div class="footer-menu-item"><a mat-button>Contact us</a></div>
+            <div class="footer-menu-item"><a mat-button>Careers</a></div>
 
         </div>
 
@@ -43,30 +43,25 @@
         <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50" ngClass.sm="mt-2" ngClass.xs="mt-2">
             <h3 class="col-title">ABOUT US</h3>
             <p fxLayout="row">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-                into electronic typesetting, remaining essentially unchanged. It was populari20d in the 1920s with the
-                release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
-                software like Aldus PageMaker including versions of Lorem Ipsum.
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-                into electronic typesetting, remaining essentially unchanged. It was populari20d in the 1920s with the
-                release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
-                software like Aldus PageMaker including versions of Lorem Ipsum.
+                iuwh dwdeiw kwehdoiweo  wedihwiue   hwedq owi qoiw qwhdqw  jgdyu uhdiuwd u wdyu gw huw ydiqw dq  qw idqiw  qwjdqwdiqdq    wdyuq idqiwd qk qw do q qhwdu q  iqpwdi p2qdp  oidw ur2dqwd jwiudyut 32y 2dwe  wedw giiwd hd iuwdiu ywdh  yiud owdow hd owdowd w doi uwdow udo  wdoiw udoiw udo wd oiw uoiwudoi odoiw dwoi  eiod woid uoiwd w oiwoeu oiew wudoiw udoiw ud  uwdiouoie u u oiwueoid uwe w oiwuoiw uoi  ueoiwudoiw euoi w oiweudoiwe u wue oiwufoiew   uwoiefuweoif uwoie  uwoifeuewoi ufoiew  uewoif uewoiufoiew uweoif uweoi fewo  owuf oiwfuoiew f  eoifuweoif oiuo   uweoioiew f we foiwe ufoiw  uoiewufoiewfuw iuwh dwdeiw kwehdoiweo  wedihwiue   hwedq owi qoiw qwhdqw  jgdyu uhdiuwd u wdyu gw huw ydiqw dq  qw idqiw  qwjdqwdiqdq    wdyuq idqiwd qk qw do q qhwdu q  iqpwdi p2qdp  oidw ur2dqwd jwiudyut 32y 2dwe  wedw giiwd hd iuwdiu ywdh  yiud owdow hd owdowd w doi uwdow udo  wdoiw udoiw udo wd oiw uoiwudoi odoiw dwoi  eiod woid uoiwd w oiwoeu oiew wudoiw udoiw ud  uwdiouoie u u oiwueoid uwe w oiwuoiw uoi  ueoiwudoiw euoi w oiweudoiwe u wue oiwufoiew   uwoiefuweoif uwoie  uwoifeuewoi ufoiew  uewoif uewoiufoiew uweoif uweoi fewo  owuf oiwfuoiew f  eoifuweoif oiuo   uweoioiew f we foiwe ufoiw  uoiewufoiewfuw iuwh dwdeiw kwehdoiweo  wedihwiue   hwedq owi qoiw qwhdqw  jgdyu uhdiuwd u wdyu gw huw ydiqw dq  qw idqiw  qwjdqwdiqdq    wdyuq idqiwd qk qw do q qhwdu q  iqpwdi p2qdp  oidw ur2dqwd jwiudyut 32y 2dwe  wedw giiwd hd iuwdiu ywdh  yiud owdow hd owdowd w doi uwdow udo  wdoiw udoiw udo wd oiw uoiwudoi odoiw dwoi  eiod woid uoiwd w oiwoeu oiew wudoiw udoiw ud  uwdiouoie u u oiwueoid uwe w oiwuoiw uoi  ueoiwudoiw euoi w oiweudoiwe u wue oiwufoiew   uwoiefuweoif uwoie  uwoifeuewoi ufoiew  uewoif uewoiufoiew uweoif uweoi fewo  owuf oiwfuoiew f  eoifuweoif oiuo   uweoioiew f we foiwe ufoiw  uoiewufoiewfuw 
 
 
             </p>
         </div>
     </div>
-    <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center" class="copyright theme-container">
-        <p ngClass.xs="mt-1" class="copyright">Copyright © 2022, Beaver ecommerce</p>
+    <div fxLayout="row wrap" fxLayoutAlign="space-between" class="theme-container">
+        <h3 class="col-title">ABOUT US</h3>
+        <p fxLayout="row">
+            iuwh dwdeiw kwehdoiweo  wedihwiue   hwedq owi qoiw qwhdqw  jgdyu uhdiuwd u wdyu gw huw ydiqw dq  qw idqiw  qwjdqwdiqdq    wdyuq idqiwd qk qw do q qhwdu q  iqpwdi p2qdp  oidw ur2dqwd jwiudyut 32y 2dwe  wedw giiwd hd iuwdiu ywdh  yiud owdow hd owdowd w doi uwdow udo  wdoiw udoiw udo wd oiw uoiwudoi odoiw dwoi  eiod woid uoiwd w oiwoeu oiew wudoiw udoiw ud  uwdiouoie u u oiwueoid uwe w oiwuoiw uoi  ueoiwudoiw euoi w oiweudoiwe u wue oiwufoiew   uwoiefuweoif uwoie  uwoifeuewoi ufoiew  uewoif uewoiufoiew uweoif uweoi fewo  owuf oiwfuoiew f  eoifuweoif oiuo   uweoioiew f we foiwe ufoiw  uoiewufoiewfuw iuwh dwdeiw kwehdoiweo  wedihwiue   hwedq owi qoiw qwhdqw  jgdyu uhdiuwd u wdyu gw huw ydiqw dq  qw idqiw  qwjdqwdiqdq    wdyuq idqiwd qk qw do q qhwdu q  iqpwdi p2qdp  oidw ur2dqwd jwiudyut 32y 2dwe  wedw giiwd hd iuwdiu ywdh  yiud owdow hd owdowd w doi uwdow udo  wdoiw udoiw udo wd oiw uoiwudoi odoiw dwoi  eiod woid uoiwd w oiwoeu oiew wudoiw udoiw ud  uwdiouoie u u oiwueoid uwe w oiwuoiw uoi  ueoiwudoiw euoi w oiweudoiwe u wue oiwufoiew   uwoiefuweoif uwoie  uwoifeuewoi ufoiew  uewoif uewoiufoiew uweoif uweoi fewo  owuf oiwfuoiew f  eoifuweoif oiuo   uweoioiew f we foiwe ufoiw  uoiewufoiewfuw iuwh dwdeiw kwehdoiweo  wedihwiue   hwedq owi qoiw qwhdqw  jgdyu uhdiuwd u wdyu gw huw ydiqw dq  qw idqiw  qwjdqwdiqdq    wdyuq idqiwd qk qw do q qhwdu q  iqpwdi p2qdp  oidw ur2dqwd jwiudyut 32y 2dwe  wedw giiwd hd iuwdiu ywdh  yiud owdow hd owdowd w doi uwdow udo  wdoiw udoiw udo wd oiw uoiwudoi odoiw dwoi  eiod woid uoiwd w oiwoeu oiew wudoiw udoiw ud  uwdiouoie u u oiwueoid uwe w oiwuoiw uoi  ueoiwudoiw euoi w oiweudoiwe u wue oiwufoiew   uwoiefuweoif uwoie  uwoifeuewoi ufoiew  uewoif uewoiufoiew uweoif uweoi fewo  owuf oiwfuoiew f  eoifuweoif oiuo   uweoioiew f we foiwe ufoiw  uoiewufoiewfuw iuwh dwdeiw kwehdoiweo  wedihwiue   hwedq owi qoiw qwhdqw  jgdyu uhdiuwd u wdyu gw huw ydiqw dq  qw idqiw  qwjdqwdiqdq    wdyuq idqiwd qk qw do q qhwdu q  iqpwdi p2qdp  oidw ur2dqwd jwiudyut 32y 2dwe  wedw giiwd hd iuwdiu ywdh  yiud owdow hd owdowd w doi uwdow udo  wdoiw udoiw udo wd oiw uoiwudoi odoiw dwoi  eiod woid uoiwd w oiwoeu oiew wudoiw udoiw ud  uwdiouoie u u oiwueoid uwe w oiwuoiw uoi  ueoiwudoiw euoi w oiweudoiwe u wue oiwufoiew   uwoiefuweoif uwoie  uwoifeuewoi ufoiew  uewoif uewoiufoiew uweoif uweoi fewo  owuf oiwfuoiew f  eoifuweoif oiuo   uweoioiew f we foiwe ufoiw  uoiewufoiewfuw iuwh dwdeiw kwehdoiweo  wedihwiue   hwedq owi qoiw qwhdqw  jgdyu uhdiuwd u wdyu gw huw ydiqw dq  qw idqiw  qwjdqwdiqdq    wdyuq idqiwd qk qw do q qhwdu q  iqpwdi p2qdp  oidw ur2dqwd jwiudyut 32y 2dwe  wedw giiwd hd iuwdiu ywdh  yiud owdow hd owdowd w doi uwdow udo  wdoiw udoiw udo wd oiw uoiwudoi odoiw dwoi  eiod woid uoiwd w oiwoeu oiew wudoiw udoiw ud  uwdiouoie u u oiwueoid uwe w oiwuoiw uoi  ueoiwudoiw euoi w oiweudoiwe u wue oiwufoiew   uwoiefuweoif uwoie  uwoifeuewoi ufoiew  uewoif uewoiufoiew uweoif uweoi fewo  owuf oiwfuoiew f  eoifuweoif oiuo   uweoioiew f we foiwe ufoiw  uoiewufoiewfuw iuwh dwdeiw kwehdoiweo  wedihwiue   hwedq owi qoiw qwhdqw  jgdyu uhdiuwd u wdyu gw huw ydiqw dq  qw idqiw  qwjdqwdiqdq    wdyuq idqiwd qk qw do q qhwdu q  iqpwdi p2qdp  oidw ur2dqwd jwiudyut 32y 2dwe  wedw giiwd hd iuwdiu ywdh  yiud owdow hd owdowd w doi uwdow udo  wdoiw udoiw udo wd oiw uoiwudoi odoiw dwoi  eiod woid uoiwd w oiwoeu oiew wudoiw udoiw ud  uwdiouoie u u oiwueoid uwe w oiwuoiw uoi  ueoiwudoiw euoi w oiweudoiwe u wue oiwufoiew   uwoiefuweoif uwoie  uwoifeuewoi ufoiew  uewoif uewoiufoiew uweoif uweoi fewo  owuf oiwfuoiew f  eoifuweoif oiuo   uweoioiew f we foiwe ufoiw  uoiewufoiewfuw
+        </p>
     </div>
+    <!-- <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center" class="py-2 copyright theme-container">
+        <p ngClass.xs="mt-1" class="copyright">Copyright © 2022, Beaver ecommerce</p>
+    </div> -->
 </footer>
 
 <!-- <footer class="bg-primary footer">
-    <div fxLayout="row wrap" fxLayoutAlign="space-between" class="py-3 border-bottom-mute theme-container">
+    <div fxLayout="row wrap" fxLayoutAlign="space-between" class="py-3 theme-container">
         <div fxFlex="100" fxFlex.gt-sm="60" fxFlex.sm="50" class="useful-links">
             <h3 class="col-title">USEFUL LINKS</h3>
             <p class="mt-2" *ngFor="let links of listSandbox.pageList$ | async">
